cam-mars updates to add SOCRATES library as external, SOCRATES library build routines, new Mars COMPSETS/Defaults, refactors and bug fixes

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -95,6 +95,14 @@ local_path = libraries/FMS
 externals = Externals_FMS.cfg
 required = True
 
+[socrates_int]
+branch = main
+protocol = git
+repo_url = https://github.com/ESCOMP/SOCRATES_interface
+local_path = libraries/SOCRATES
+externals = Externals_SOCRATES.cfg
+required = True
+
 [mosart]
 tag = mosart1_0_47
 protocol = git
