update externals to use atmos_phys with cesmplanets version of held-suarez

--- a/Externals_CAM.cfg
+++ b/Externals_CAM.cfg
@@ -55,9 +55,9 @@ tag = ALI_ARMS_v1.0.0
 required = True
 
 [atmos_phys]
-tag = atmos_phys0_00_011
+tag = cesmplanets_atmos_phys0_00_011.002
 protocol = git
-repo_url = https://github.com/NCAR/atmospheric_physics
+repo_url = https://github.com/jtruesdal/atmospheric_physics
 required = True
 local_path = src/atmos_phys
 
